# sutu

./: .codebase_index.md  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.meta.json  docs_link_obsidian.bat  dual-brush-gpu-deliverable.md  index.html  notes.md  package.json  playwright.config.ts  pnpm-lock.yaml  release-body.md  task_plan.md  tsconfig.json  vite.config.ts  vitest.config.ts
.agent/rules/: paintboardrules.md
.dev/: README.md  dev.bat  dev.command  dev.ps1  dev.sh  install_dev_env.bat  issue.bat  pre_release_check.ps1  pre_release_check.sh  publish_release.bat  publish_release.command  setup_and_run.bat  test.bat
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  issue-triage.yml  package-preview.yml  release.yml
abr/: case-5000-01.json  case-5000-02.json  case-5000-04.json  log.md
dev/: README.md  dev.bat  dev.sh  ios_dev.command  ios_dev.sh  issue.bat  publish_release.bat  publish_release.sh
docs/: agents_md_optimize.md  ai-provider-reuse.md  architecture.md  development-setup.md  project_idea.md  testing-strategy.md  ui-guidelines.md
e2e/: app.spec.ts  benchmark.spec.ts  move-tool.spec.ts  stroke-flicker.spec.ts
playwright-report/: index.html
scripts/: generate-release-notes.mjs  generate_placeholder_icon.py  issue-triage.mjs  local-daily-priority.mjs  process_icons.py  sync-app-meta.mjs  sync-icons.mjs  sync-version.mjs
src/: App.tsx  constants.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: brush_benchmark.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: analyze_brush_order.rs  analyze_brush_params.rs  analyze_desc_raw.rs  analyze_dual_brush_size.rs  analyze_format.rs  analyze_p6.rs  analyze_samp_keys.rs  channel_parse.rs  channel_test.rs  check_offset25.rs  correct_decode.rs  debug_abr_full.rs  debug_bounds.rs  debug_brush_names.rs  debug_desc_section.rs  debug_failing.rs  debug_find_uuid.rs  debug_liuyang_abr.rs  debug_match_analysis.rs  debug_multi_uuid.rs  debug_p8.rs  debug_p8_manual.rs  debug_panic.rs  debug_step.rs  debug_unmatched.rs  debug_uuid_compare.rs  decode_abr_gimp_style.rs  decode_p8.rs  decode_pat_file.rs  direct_abr_parse.rs  dump_desc_structure.rs  extract_abr_patterns.rs  find_txtr_ids.rs  gimp_skip_test.rs  le_abr_decode.rs  offset_test.rs  p6_hex.rs  p6_rle_test.rs  quick_vma.rs  quick_vma2.rs  (+12 more)
src-tauri/icons/: icon.icns
src-tauri/src/: app_meta.rs  bench.rs  bench_server.rs  benchmark.rs  commands.rs  lib.rs  main.rs
src-tauri/src/abr/: cursor.rs  descriptor.rs  error.rs  mod.rs  parser.rs  patt.rs  tests.rs  types.rs
src-tauri/src/brush/: cache.rs  engine.rs  interpolation.rs  library.rs  mod.rs  pattern_cache.rs  soft_dab.rs
src-tauri/src/core/: errors.rs  mod.rs
src-tauri/src/core/adapters/: mod.rs
src-tauri/src/core/assets/: mod.rs
src-tauri/src/core/brush_model/: mod.rs
src-tauri/src/core/contracts/: mod.rs  pressure_v1.rs
src-tauri/src/core/formats/: mod.rs
src-tauri/src/file/: layer_cache.rs  mod.rs  ora.rs  tiff.rs  types.rs
src-tauri/src/file/psd/: compression.rs  mod.rs  reader.rs  types.rs  writer.rs
src-tauri/src/input/: backend.rs  macos_backend.rs  mod.rs  pointer_backend.rs  processor.rs  tablet.rs  wintab_backend.rs
src-tauri/src/input/krita_v3/: coordinate_mapper.rs  coordinate_mapper_mac.rs  macnative_adapter.rs  mod.rs  phase_machine.rs  phase_machine_mac.rs  timebase.rs  timebase_mac.rs  types.rs  wintab_adapter.rs
src-tauri/src/pattern/: library.rs  mod.rs  pat.rs  types.rs
test-results/: benchmark-2026-01-15 (1).json  benchmark-2026-01-15.json  benchmark-2026-01-15_app.json
(+734 files in other folders)
