[package]
name = "paintboard"
version = "0.4.1"
description = "Professional painting software with low-latency pen input"
authors = ["PaintBoard Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "paintboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tablet input
octotablet = "0.1"
wintab_lite = { version = "1.0.1", features = ["libloading"] }
libloading = "0.8"

# Windows API for HWND access
[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6"

# Image processing
image = "0.25"

# Binary parsing
byteorder = "1.5"

# Base64 encoding for brush textures
base64 = "0.22"

# PSD file support
psd = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "brush_benchmark"
harness = false

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
