[package]
name = "paintboard"
version = "0.7.5"
description = "Professional painting software with low-latency pen input"
authors = ["PaintBoard Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "paintboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Network benchmark
axum = { version = "0.7", features = ["ws"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors"] }


# Tablet input
octotablet = "0.1"
wintab_lite = { version = "1.0.1", features = ["libloading"] }
libloading = "0.8"
indexmap = "2.11.4"

# Windows API for HWND access
[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6"

# Image processing
image = "0.25"

# Binary parsing
byteorder = "1.5"

# Base64 encoding for brush textures
base64 = "0.22"

# PSD file support
psd = "0.3"

# WebP encoding (faster than PNG for layer caching)
webp = "0.3"

# File format support (ORA, TIFF)
zip = { version = "2.1", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31", features = ["serialize"] }
tiff = "0.9"
rayon = "1.10"
parking_lot = "0.12"
lz4_flex = "0.11"
dirs = "5"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "brush_benchmark"
harness = false

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
